--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>snktCodes</title>
   <meta property="og:url" content="./index.html" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="AmusementPark" />
-  <meta property="og:description" content="Play AmusementPark" />
+  <meta property="og:title" content="snktCodes" />
+  <meta property="og:description" content="Portfolio page of snktcodes" />
   <meta property="og:image" content="./FbImg.png" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!-- <link rel="stylesheet" href="style.css" /> -->
